Cherry-pick r263462. rdar://problem/64897984

Fix the build once RBSProcessLimitations.h is introduced
    https://bugs.webkit.org/show_bug.cgi?id=213562

    Reviewed by Wenson Hsieh.

    * Platform/spi/ios/RunningBoardServicesSPI.h:
    We can't forward-declare Objective-C SPI if it actually exists
    without inspiring duplicate definition errors.

    Canonical link: https://commits.webkit.org/226357@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263462 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/226252.7@safari-610.1.18.3-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.18.3-branch@263676 268f45cc-cd09-0410-ab3c-d52691b4dbfc